# cp2077_profanity_pipeline

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  config.toml.example  profanity_list.txt  pyproject.toml  requirements.txt
.claude/agents/: audio-pipeline.md  cp2077-audio-modding.md  pipeline-auditor.md  pipeline-qa.md  pipeline-runner.md  profanity-scanner.md  radio-discovery.md  test-runner.md  wolvenkit.md
cp2077_profanity/: __init__.py  audio.py  config.py  discovery.py  extractor.py  fileutil.py  main.py  packager.py  patcher.py  radio.py  repacker.py  scanner.py  wsl_utils.py
cp2077_profanity/data/: radio_tracks.json
tests/: test_audio.py  test_config.py  test_fileutil.py  test_patcher.py  test_scanner.py  test_wsl_utils.py
