[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cp2077-profanity"
version = "1.0.0"
description = "CLI toolchain for filtering profanity from Cyberpunk 2077 localization files"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "regex>=2023.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cp2077_profanity*"]

[tool.setuptools.package-data]
cp2077_profanity = ["data/*.json"]

[project.scripts]
cp2077-profanity = "cp2077_profanity.main:main"
